fix: replace R2 with direct HF download for DaSiWa and unify paths to /runpod-volume

--- a/extra_model_paths.yaml
+++ b/extra_model_paths.yaml
@@ -1,10 +1,14 @@
-# Pod mode paths (uses /runpod-volume which is typically symlinked to network volume)
+# extra_model_paths.yaml for ComfyUI Wan2.1/2.2 Setup
+# Supports both RunPod Pods (/workspace) and Serverless (/runpod-volume)
+
+# Pod mode paths (uses /runpod-volume/models which is typically symlinked to network volume)
 workspace:
   base_path: /runpod-volume/models
   diffusion_models: diffusion_models
   text_encoders: text_encoders
   vae: vae
   loras: loras
+  clip_vision: clip_vision
 
 # Serverless mode paths (direct network volume mount)
 runpod_volume:
@@ -13,3 +17,4 @@ runpod_volume:
   text_encoders: text_encoders
   vae: vae
   loras: loras
+  clip_vision: clip_vision
